src/resources/debt.css
@CHARSET "ISO-8859-1";


html {
  overflow-y: hidden !important;
}

body {
  background-color: lightgray;
}

#container {
  max-width: 960px;
  margin: 0 auto;
  position: relative;
}

md-input-container input[type=number]::-webkit-inner-spin-button,
md-input-container input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
md-input-container input[type=number] {
  -moz-appearance: textfield;
}

.no-margin-bottom {
  margin-bottom: 0;
}

.no-margin-top {
  margin-top: 0;
}

.no-margin-left {
  margin-left: 0;
}

.no-margin-right {
  margin-right: 0;
}

.no-margin {
  margin: 0;
}

.margin-bottom {
   margin-bottom: 8px;
 }

.margin-top {
  margin-top: 8px;
}

.margin-left {
  margin-left: 8px;
}

.margin-right {
  margin-right: 8px;
}

.margin {
  margin: 8px 8px 8px 8px;
}

.margin-bottom-double {
  margin-bottom: 16px;
}

.margin-top-double {
  margin-top: 16px;
}

.margin-left-double {
  margin-left: 16px;
}

.margin-right-double {
  margin-right: 16px;
}

.margin-double {
  margin: 16px 16px 16px 16px;
}

md-input-container.md-title, md-input-container.md-title input {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

section {
  margin-bottom: 16px;
}

.md-subheader.section-header .md-subheader-inner {
  padding-left: 0;
}

.row {
  min-height: 48px;
}


/* Fix icon and text aligment when a 2-line list item is clickable. Requires an nbsp; or something to ensure content on line 2. */
.md-2-line .md-list-item-inner {
  height: 72px;
}
.md-2-line .md-list-item-inner md-icon {
  align-self: flex-start;
}

icon-button-strut {
  width: 40px;
  height: 40px;
  margin: 0 6px;
}

.settled {
  text-decoration: line-through;
}

.no-errors-spacer .md-errors-spacer {
  display: none;
}

.participation input {
  width: 8rem;
}
.participation .md-errors-spacer {
  display: none;
}
.participation .currency-label {
  margin-right: 16px;
}
.participation md-checkbox {
  margin-bottom: 0;
  margin-right: 16px;
}

.exchange-rate .md-errors-spacer {
  display: none;
}
.exchange-rate span, .exchange-rate md-input-container {
  margin-right: 24px;
}

md-datepicker.no-icon .md-datepicker-button {
  display: none;
}
md-datepicker.no-icon .md-datepicker-input-container {
  margin-left: 0;
}

